updated projects json

--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,12 @@
 [
     {
+        "title": "Emoji Interpreter",
+        "date":"December 2020",
+        "content":"do you ever get confused thinking what is the meaning of the emoji? Well then we've good news for you ! presenting emoji meaning search for your daily usage. feel free to use it :)",
+        "liveLink":"https://guesstheemoji.netlify.app/",
+        "codeLink":"https://github.com/WhoAdarshPandya/emoji-interpreter"
+    },
+    {
         "title": "Ferbs Translator ",
         "date":"November 2020",
         "content":"Die hard fan og Phineas and ferbs show? yeah , me too. but what if we can translate our language to ferbs language? sounds cool right? then do check it out :)",
