--- a/projects.json
+++ b/projects.json
@@ -31,7 +31,7 @@
         "title": "FAST Api & Socket.io ",
         "date":"November 2020",
         "content":"A Realtime chat app with React JS in frontend and Python's Fast Api in backend with materialize look and feel",
-        "liveLink":"https://repl.it/@WhoAdarshPandya/WhoIsMrRobot?embed=1&output=1",
-        "codeLink":"https://vigilant-nobel-366eeb.netlify.app/"
+        "liveLink":"https://vigilant-nobel-366eeb.netlify.app/",
+        "codeLink":"https://github.com/WhoAdarshPandya/fastAPI-chat-app/"
     }
 ]
